<resources>
    <string name="app_name">MobileProjectWagba</string>
    <string name="Login">LogIn</string>
    <string name="nameEntry">Enter your name</string>
    <string name="IDEntry">Enter your ID</string>
    <string name="emailEntry">Enter your e-mail</string>
    <string name="passwordEntry">Enter your password</string>
    <string name="mobileEntry">Enter your phone number</string>
    <string name="signUp">Create New Account? SIGN UP</string>
    <string name="choice">OR</string>
    <string name="SignUp">Sign Up</string>
    <string name="login">Already a user? LOG IN</string>
    <string name="errorMessage">An error has occurred</string>
    <string name="descriptionLabel">Description:</string>
    <string name="priceLabel">Price:</string>
    <string name="availabilityLabel">Availability:</string>
    <string name="cartButton">Add to cart</string>
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="initialNumber">1</string>
    <string name="initialPrice">0.0 LE</string>
    <string name="egyptianCurrency">LE</string>
    <string name="dishesTotalLabel">Dishes Total:</string>
    <string name="deliveryServiceLabel">Delivery Service:</string>
    <string name="tax">15%</string>
    <string name="orderTotalLabel">Order Total:</string>
    <string name="checkoutButton">Checkout</string>
    <string name="homeNavBar">Home</string>
    <string name="profileNavBar">Profile</string>
    <string name="historyNavBar">History</string>
    <string name="cartNavBar">Cart</string>
    <string name="dateLabel">Date:</string>
    <string name="statusLabel">Status:</string>
    <string name="deliverGateLabel">Deliver To:</string>
    <string name="gate3">Gate 3</string>
    <string name="gate4">Gate 4</string>
    <string name="deliverTimeLabel">Deliver Time:</string>
    <string name="twelveNoon">12:00 PM</string>
    <string name="threePM">3:00 PM</string>
    <string name="confirmBtn">Confirm</string>
    <string name="cancelBtn">Cancel</string>
    <string name="confirmOrder">Your order has been sent</string>
    <string name="cancelOrder">Your order has been canceled</string>
    <string name="profilePage">Profile</string>
    <string name="nameLabel">Name:</string>
    <string name="editProfileBtn">Edit Profile</string>
    <string name="confirmProfileEdit">Your profile has been edited</string>
    <string name="emptyID">Enter your ID</string>
    <string name="emptyName">Enter your name</string>
    <string name="emptyEmail">Enter your email</string>
    <string name="emptyPassword">Enter your password</string>
    <string name="emptyPhoneNumber">Enter your phone number</string>
    <string name="wrongPhoneNumber">The number entered is not a phone number</string>
    <string name="successfulSignUp">Signup process was successful</string>
    <string name="failedSignUpEmailInUse">Email already in use</string>
    <string name="failedSignUpIdAlreadyExists">ID is in use</string>
    <string name="failedSignUpInvalidEmail">Email is invalid</string>
    <string name="failedSignUpShortPassword">Password must be at least 6 characters</string>
    <string name="failedSignUpDefault">Sign up process has failed</string>
    <string name="successfulLogin">Login process was successful</string>
    <string name="failedLogin">Check that the email and password are correct</string>
    <string name="dishAdded">Dish has been added to cart</string>
    <string name="dishCanNotBeAdded">Dish is currently unavailable, pick another one</string>
    <string name="noDeliveryGateSelected">Select a delivery gate</string>
    <string name="noDeliveryTimeSelected">Select a delivery time</string>
    <string name="orderAfter10">Can not order after 10 if you want the order to be delivered at 12 PM</string>
    <string name="orderAfter1">Can not order after 1 PM if you want the order to be delivered at 3 PM</string>
    <string name="loadingToast">Firebase takes time to load</string>
    <string name="dummyUserEmail">salma123@gmail.com</string>
    <string name="dummyUserPassword">123456</string>
</resources>