<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activities.SignUp">

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/SignUp"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/nameSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/nameEntry"
        android:inputType="text"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/IDSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/IDEntry"
        android:inputType="text"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/emailEntry"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/passwordEntry"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="10dp"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/mobileSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/mobileEntry"
        android:inputType="phone"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="10dp"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/SignUp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/orange"/>

    <TextView
        android:id="@+id/txtView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>



</androidx.appcompat.widget.LinearLayoutCompat>