<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Cart_Activity"
    android:background="@color/lightBeige">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dishesTotalLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="20dp"
            android:text="@string/dishesTotalLabel"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/dishesTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:text="@string/initialPrice"
            android:textSize="30sp"
            android:textColor="@color/darkBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deliveryServicelLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="20dp"
            android:text="@string/deliveryServiceLabel"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/deliveryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="30sp"
            android:textColor="@color/darkBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderTotalLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="20dp"
            android:text="@string/orderTotalLabel"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/orderTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/initialPrice"
            android:textSize="30sp"
            android:textColor="@color/darkBlue"/>

    </LinearLayout>

    <Button
        android:id="@+id/cartBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/checkoutButton"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkBlue"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:menu="@menu/bottom_nav_menu1"
        android:background="@color/lightBeige"
        android:layout_marginTop="10dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>