<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBeige"
    tools:context=".Activities.EditProfileActivity">

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:drawableLeft="@drawable/ic_baseline_person_24_2"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTxtUserNameEditProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/emptyName"
        android:inputType="text"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/editTxtUserMobileEditProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/emptyPhoneNumber"
        android:inputType="phone"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="10dp"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="10dp"
        android:background="@drawable/border"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/confirmEditBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/confirmBtn"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkBlue"
            android:layout_gravity="center"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>