<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lightBeige">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>


        <ImageView
            android:id="@+id/rImage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionLabel"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/darkBlue"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/priceLabel"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/availabilityLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/availabilityLabel"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="italic"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:textColor="@color/darkBlue"
                android:layout_marginStart="20dp"/>


            <TextView
                android:id="@+id/availability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:textColor="@color/darkBlue"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/cartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cartButton"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkBlue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>